--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="bsv.png" type="image/png">
     <meta property="og:site_name" content="BSVnightビットコイン勉強会">
     <meta property="og:description" content="BitcoinSVについて学びましょう。" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="" />
 
     <link rel="stylesheet" href="style.css">  
     <title> 申込み｜BitcoinSVを学ぼう</title>
@@ -57,8 +57,8 @@
             <div class=teacher5>
               <div class=name5><strong class="sharp">ホスト</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
               <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
-              <!--<div class=theme5><strong>テーマ</strong><br></div>
-              <div class=overview5><strong>概要</strong><br>概要概要概要概要概要概要</div>-->
+              <div class=theme5><strong>テーマ</strong><br>Script 超入門</div>
+              <div class=overview5><strong>概要</strong><br>sCryptの環境設定をして<br>HelloWorld的なスクリプトを書く</div>
             </div>
           </div>  
           <div class=disc>
