--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             </a>
           </div>   
           
-          <!--<div class=studygroup2>
+          <div class=studygroup2>
             <div class=teacher4>
-              <div class=name4><strong class="sharp">講師</strong><br>$kenshishido<br><a href="https://twitter.com/kenshishido">https://twitter.com/kenshishido</a></div>              
-              <div class=theme4><strong>テーマ</strong><br>現在のBitcoin業界を総括する</div>
-              <div class=overview4><strong>概要</strong><br>クレイグ博士の裁判が今後与える影響</div>
+              <div class=name4><strong class="sharp">講師</strong><br>Masumi Hamahira<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a></div>              
+              <div class=theme4><strong>テーマ</strong><br>イスラム金融から見たBitcoin</div>
+              <div class=overview4><strong>概要</strong><br>イスラム金融でのビットコインの活用法と<br>ビットコインが可能にするイスラム金融の未来</div>
             </div> 
             <div class=teacher5>
               <div class=name5><strong class="sharp">ホスト</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
               <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
-              <div class=theme5><strong>テーマ</strong><br>Script 超入門</div>
-              <div class=overview5><strong>概要</strong><br>sCryptの環境設定をして<br>HelloWorld的なスクリプトを書く</div>
+              <div class=theme5><strong>テーマ</strong><br>底辺マイナーが語るマイニング</div>
+              <div class=overview5><strong>概要</strong><br>マイニング施設やマイニングから得た経験、失敗談等</div>
             </div>
-          </div>-->  
+          </div>
           <div class=disc>
             <h3 class=note>参加条件</h3>
             <p class="exp">
@@ -148,7 +148,7 @@
             <p>bsvnight@moneybutton.com</p>
           <p>また、下記２名のご協力を賜り、当Webサイト/YouTube管理・運営も行っております。</p>
             ISHIDA <a href="https://twitter.com/ISHIDA00443185">https://twitter.com/ISHIDA00443185</a><br>
-            Handcash ID: $kengoishida<br>
+            Handcash ID: $KengoIshida<br>
             Moneybutton: 27123@moneybutton.com<br>
           </P>
           <p>
