--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class=teacher4>
               <div class=name4><strong class="sharp">講師</strong><br>Masumi Hamahira<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a></div>              
               <div class=theme4><strong>テーマ</strong><br>イスラム金融から見たBitcoin</div>
-              <div class=overview4><strong>概要</strong><br>イスラム金融でのビットコインの活用法と<br>ビットコインが可能にするイスラム金融の未来</div>
+              <div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>
             </div> 
             <div class=teacher5>
               <div class=name5><strong class="sharp">ホスト</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
               <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
               <div class=theme5><strong>テーマ</strong><br>底辺マイナーが語るマイニング</div>
-              <div class=overview5><strong>概要</strong><br>マイニング施設やマイニングから得た経験、失敗談等</div>
+              <div class=overview5><strong>概要</strong><br>マイニング施設設立や<br>マイニングから得た経験、失敗談等</div>
             </div>
           </div>
           <div class=disc>
