--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </a>
           </div>   
           
-          <div class=studygroup2>
+          <!--<div class=studygroup2>
             <div class=teacher4>
               <div class=name4><strong class="sharp">講師</strong><br>Masumi Hamahira<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a></div>              
               <div class=theme4><strong>テーマ</strong><br>イスラム金融から見たBitcoin</div>
@@ -60,7 +60,7 @@
               <div class=theme5><strong>テーマ</strong><br>底辺マイナーが語るマイニング</div>
               <div class=overview5><strong>概要</strong><br>マイニング施設設立や<br>マイニングから得た経験、失敗談等</div>
             </div>
-          </div>
+          </div>-->
           <div class=disc>
             <h3 class=note>参加条件</h3>
             <p class="exp">
@@ -82,7 +82,46 @@
               <div class=studygroup1>
                 <h4 class="time">第<strong class="pre">2</strong>回</h4>
                 <div class=teacher1>
-                  <iframe class= "movie1" src="https://www.youtube.com/embed/L8rnOqxgoKo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/loDTa0Twp5w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="hamahira">
+                    <div class=name1><strong class="sharp">講師</strong><br>濱平真澄<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahirao</a></div>
+                    <div class=theme1><strong class="sharp">テーマ</strong><br>イスラム金融からみたビットコイン</div>
+                    <div class=overview1><strong class="sharp">概要</strong><br>ビットコインが可能にするイスラム金融の未来</div>
+                  </div>  
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/p45myulXQx8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="hamahira">
+                    <div class=name1><strong class="sharp">講師</strong><br>濱平真澄<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahirao</a></div>
+                    <div class=theme1><strong class="sharp">テーマ</strong><br>イスラム金融からみたビットコイン</div>
+                    <div class=overview1><strong class="sharp">概要</strong><br>質疑応答</div>
+                  </div>  
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/zgEsHBqbp50" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="ksato">
+                    <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
+                    <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>底辺マイナーが語るマイニング</div>
+                    <div class=overview3><strong class="sharp">概要</strong><br>ビットコインのマイニングとは何か</div>
+                  </div>
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/p9-GusjAWsE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="ksato">
+                    <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
+                    <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>底辺マイナーが語るマイニング</div>
+                    <div class=overview3><strong class="sharp">概要</strong><br>質疑応答</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class = past1>
+              <div class=studygroup1>
+                <h4 class="time">第<strong class="pre">2</strong>回</h4>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/L8rnOqxgoKo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <div class="shishido">
                     <div class=name1><strong class="sharp">講師</strong><br>宍戸健<br><a href="https://twitter.com/kenshishido">https://twitter.com/kenshishido</a></div>
                     <div class=theme1><strong class="sharp">テーマ</strong><br>現在のBitcoin業界を総括する</div>
@@ -90,7 +129,7 @@
                   </div>  
                 </div>
                 <div class=teacher1>
-                  <iframe class="movie1" src="https://www.youtube.com/embed/ns5YhzkXcq4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/ns5YhzkXcq4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <div class="shishido">
                     <div class=name1><strong class="sharp">講師</strong><br>宍戸健<br><a href="https://twitter.com/kenshishido">https://twitter.com/kenshishido</a></div>
                     <div class=theme1><strong class="sharp">テーマ</strong><br>現在のBitcoin業界を総括する</div>
@@ -106,7 +145,6 @@
                     <div class=overview3><strong class="sharp">概要</strong><br>sCryptの環境設定をしてHelloWorld的なスクリプトを書く</div>
                   </div>
                 </div>
-
               </div>
             </div>
             <div class=past1>
