--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h4>2020<span>年</span>11<span>月</span>28<span>日</span>19<span>時</span>30分〜</h4>
             <p>毎月第４土曜日開催予定</p>
           </div>  
-          <p　class="youtube">YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
+          <p　class=youtube>YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
           <div class=entry>
             <a href="https://www.youtube.com/channel/UCJuT5cqfqOBLG99xbFO6LaQ">
                 <button type="button">YouTubeチャンネル</button>
@@ -63,7 +63,7 @@
           </div>-->
           <div class=disc>
             <h3 class=note>参加条件</h3>
-            <p class="exp">
+            <p class=exp>
               下記のお申込みフォームより参加お申込みください。後日、zoomのミーティングIDとパスコードをお送りいたします。推奨はしませんが、仮名、アバター等での参加も可能です。ただしその場合は、SNS等でご使用のアバターやアイコン等にてご参加ください。なお、本勉強会はBitcoinSVの普及のために開催しており、当日のセミナーは、後日当サイトやYOUTUBE等のSNSにアップさせて頂きます。また、講師を勤めていただく皆様のご好意により成り立っており、発表内容が事実と異なっていたとしても責任は負いかねますので、ご理解いただける方のみご参加ください。また、ご参加のお申込みをもって、上記条件に同意いただいたものとさせて頂きます。
             </p>
             <div class=entry>
@@ -80,7 +80,7 @@
           <h3 class=past>過去に開催の勉強会</h3>
             <div class = past1>
               <div class=studygroup1>
-                <h4 class="time">第<strong class="pre">3</strong>回</h4>
+                <h4 class=time>第<strong class="pre">3</strong>回</h4>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/loDTa0Twp5w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <div class=hamahira>
@@ -99,7 +99,7 @@
                 </div>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/6pwX2O0JbHE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class="ksato">
+                  <div class=ksato>
                     <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
                     <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
                     <div class=theme3><strong class="sharp">テーマ</strong><br>底辺マイナーが語るマイニング</div>
@@ -108,7 +108,7 @@
                 </div>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/p9-GusjAWsE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class="ksato">
+                  <div class=ksato>
                     <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
                     <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
                     <div class=theme3><strong class="sharp">テーマ</strong><br>底辺マイナーが語るマイニング</div>
@@ -119,10 +119,10 @@
             </div>
             <div class = past1>
               <div class=studygroup1>
-                <h4 class="time">第<strong class="pre">2</strong>回</h4>
+                <h4 class=time>第<strong class="pre">2</strong>回</h4>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/L8rnOqxgoKo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class="shishido">
+                  <div class=shishido>
                     <div class=name1><strong class="sharp">講師</strong><br>宍戸健<br><a href="https://twitter.com/kenshishido">https://twitter.com/kenshishido</a></div>
                     <div class=theme1><strong class="sharp">テーマ</strong><br>現在のBitcoin業界を総括する</div>
                     <div class=overview1><strong class="sharp">概要</strong><br>クレイグ博士の裁判が今後与える影響</div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/ns5YhzkXcq4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class="shishido">
+                  <div class=shishido>
                     <div class=name1><strong class="sharp">講師</strong><br>宍戸健<br><a href="https://twitter.com/kenshishido">https://twitter.com/kenshishido</a></div>
                     <div class=theme1><strong class="sharp">テーマ</strong><br>現在のBitcoin業界を総括する</div>
                     <div class=overview1><strong class="sharp">概要</strong><br>クレイグ博士の裁判が今後与える影響</div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/zgEsHBqbp50" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class="ksato">
+                  <div class=ksato>
                     <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
                     <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
                     <div class=theme3><strong class="sharp">テーマ</strong><br>Script 超入門</div>
@@ -149,25 +149,25 @@
             </div>
             <div class=past1>
               <div class=studygroup1>
-                <h4 class="time">第<strong class="pre">１</strong>回</h4>
+                <h4 class=time>第<strong class="pre">１</strong>回</h4>
                   <div class=teacher1>
-                    <iframe class="movie1" src="https://www.youtube.com/embed/a-QT64ZbAnU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="besuke">
+                    <iframe class=movie1 src="https://www.youtube.com/embed/a-QT64ZbAnU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class=besuke>
                       <div class=name1><strong class="sharp">講師</strong><br>べーすけ<br><a href="https://twitter.com/SatoshiVisioner">https://twitter.com/SatoshiVisioner</a></div>
                       <div class=theme1><strong class="sharp">テーマ</strong><br>Genesis Block</div>
                       <div class=overview1><strong class="sharp">概要</strong><br>（仮）金融史とBitcoinの誕生</div>
                     </div>  
                   </div>
                   <div class=teacher1>
-                    <iframe class="movie2" src="https://www.youtube.com/embed/ObXPYZZMxKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="yone">
+                    <iframe class=movie2 src="https://www.youtube.com/embed/ObXPYZZMxKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class=yone>
                       <div class=name2><strong class="sharp">講師</strong><br>吉澤光喜<br><a href="https://twitter.com/liberkoki">https://twitter.com/liberkoki</a></div>
                       <div class=theme2><strong class="sharp">テーマ</strong><br>未来の鍵・ビットコイン</div>
                       <div class=overview2><strong class="sharp">概要</strong><br>ビットコインで実現される新しい仕事を考えてみる。</div>
                     </div>  
                   </div>
                   <div class=teacher1>
-                    <iframe class="movie3" src="https://www.youtube.com/embed/1SKROa8tzxc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class=movie3 src="https://www.youtube.com/embed/1SKROa8tzxc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="ksato">
                       <div class=name3><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
                       <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
@@ -178,8 +178,8 @@
               </div>  
             </div>  
         </section>  
-        <div class="last">
-          <h4 class="huma">寄付・カンパについて</h4>
+        <div class=last>
+          <h4 class=huma">寄付・カンパについて</h4>
           <p class="sato">
             この勉強会はKEN SATOが個人的に日本でのビットコイン(BSV)の普及とビットコインの知識・技術の共有を目指して、ボランティアで主宰しております。寄付・カンパ大歓迎です。</P>
             <a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a>
