--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class=date>
             <h1 class=title>Bitcoin<span>SV</span>勉強会</h1>
             <h3>次回開催日時</h3>
-            <h4>2020<span>年</span>11<span>月</span>28<span>日</span>19<span>時</span>30分〜</h4>
-            <p>毎月第４土曜日開催予定</p>
+            <h4>2020<span>年</span>12<span>月</span>19<span>日</span>19<span>時</span>30分〜</h4>
+            <!--<p>毎月第４土曜日開催予定</p>-->
           </div>  
           <p　class=youtube>YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
           <div class=entry>
@@ -78,6 +78,34 @@
       
         <section>
           <h3 class=past>過去に開催の勉強会</h3>
+            <div class = past1>
+              <div class=studygroup1>
+                <h4 class=time>第<strong class="pre">4</strong>回</h4>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/L8rnOqxgoKo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=shishido>
+                    <div class=name1><strong class="sharp">講師</strong><br>べーすけ<br><a href="https://twitter.com/SatoshiVisioner">https://twitter.com/SatoshiVisioner</a></div>
+                    <div class=theme1><strong class="sharp">テーマ</strong><br>インフレするビットコイン／デフレするビットコイン</div>
+                  </div>  
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1　src="https://www.youtube.com/embed/9ciUZlJeR7Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=ksato>
+                    <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
+                    <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>オリジナルに向かって水面化で進化するビットコインSV</div>
+                  </div>
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1　src="https://www.youtube.com/embed/Wyc9m2rnTgM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=ksato>
+                    <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
+                    <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>質疑応答ーオリジナルに向かって水面化で進化するビットコインSV</div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class = past1>
               <div class=studygroup1>
                 <h4 class=time>第<strong class="pre">3</strong>回</h4>
