--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <h4 class=time>第<strong class="pre">3</strong>回</h4>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/loDTa0Twp5w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class=hamahira>
+                  <div class=ksato>
                     <div class=name1><strong class="sharp">講師</strong><br>濱平真澄<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahirao</a></div>
                     <div class=theme1><strong class="sharp">テーマ</strong><br>イスラム金融からみたビットコイン</div>
                     <div class=overview1><strong class="sharp">概要</strong><br>ビットコインが可能にするイスラム金融の未来</div>
@@ -119,7 +119,7 @@
                 </div>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/p45myulXQx8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class=hamahira>
+                  <div class=ksato>
                     <div class=name1><strong class="sharp">講師</strong><br>濱平真澄<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahirao</a></div>
                     <div class=theme1><strong class="sharp">テーマ</strong><br>イスラム金融からみたビットコイン</div>
                     <div class=overview1><strong class="sharp">概要</strong><br>質疑応答</div>
