--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             </a>
           </div>   
           
-          <!--<div class=studygroup2>
+          <div class=studygroup2>
             <div class=teacher4>
-              <div class=name4><strong class="sharp">講師</strong><br>Masumi Hamahira<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a></div>              
-              <div class=theme4><strong>テーマ</strong><br>イスラム金融から見たBitcoin</div>
-              <div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>
-            </div> 
-            <div class=teacher5>
+              <div class=name4><strong class="sharp">講師</strong><br>千葉工業大学<br>藤原准教授<!--<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a>--></div>              
+              <div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
+              <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
+            </div>
+           <!--<div class=teacher5>
               <div class=name5><strong class="sharp">ホスト</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
               <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
               <div class=theme5><strong>テーマ</strong><br>底辺マイナーが語るマイニング</div>
               <div class=overview5><strong>概要</strong><br>マイニング施設設立や<br>マイニングから得た経験、失敗談等</div>
-            </div>
-          </div>-->
+            </div>-->
+          </div>
           <div class=disc>
             <h3 class=note>参加条件</h3>
             <p class=exp>
@@ -89,7 +89,7 @@
                   </div>  
                 </div>
                 <div class=teacher1>
-                  <iframe class=movie1　src="https://www.youtube.com/embed/gChmLd12X7o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/gChmLd12X7o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <div class=ksato>
                     <div class=name1><strong class="sharp">講師</strong><br>株式会社ChainBow　李 龍<br><a href="https://twitter.com/svnote">https://https://twitter.com/svnote</a></div>
                     <div class=theme3><strong class="sharp">テーマ</strong><br>ビットコイン(BSV)を基盤としたアプリケーションとレイヤー１トークンプロトコルの紹介</div>
