--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           
           <div class=studygroup2>
             <div class=teacher4>
-              <div class=name4><strong class="sharp">講師</strong><br>千葉工業大学<br>藤原准教授<!--<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a>--></div>              
+              <div class=name4><strong class="sharp">次回講師</strong><br>千葉工業大学<br>藤原准教授<!--<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a>--></div>              
               <div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
