--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
               <div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
-           <!--<div class=teacher5>
+           <div class=teacher5>
               <div class=name5><strong class="sharp">ホスト</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
               <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
-              <div class=theme5><strong>テーマ</strong><br>底辺マイナーが語るマイニング</div>
-              <div class=overview5><strong>概要</strong><br>マイニング施設設立や<br>マイニングから得た経験、失敗談等</div>
-            </div>-->
+             <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>
+           </div>
+           <div class=teacher5>
+              <div class=name5><strong class="sharp">アプリ紹介</strong><br>SatoSeed<br><a href="https://twitter.com/SatoSeedSV">https://twitter.com/SatoSeedSV</a><br></div>
+             <div class=theme5><strong>テーマ</strong><br>Relica</div>
+           </div>
           </div>
           <div class=disc>
             <h3 class=note>参加条件</h3>
