--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class=date>
             <h1 class=title>Bitcoin<span>SV</span>勉強会</h1>
             <h3>次回開催日時</h3>
-            <h4>2021<span>年</span>1<span>月</span>23<span>日</span>19<span>時</span>30分〜</h4>
+            <h4>2021<span>年</span>2<span>月</span>28<span>日</span>19<span>時</span>30分〜</h4>
             <!--<p>毎月第４土曜日開催予定</p>-->
           </div>  
           <p　class=youtube>YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
@@ -48,19 +48,19 @@
             </a>
           </div>   
             <div class=teacher0>
-              <div class=name4><strong class="sharp">次回講師</strong><br>千葉工業大学<br>藤原准教授<!--<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a>--></div>              
-              <div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
+              <div class=name4><strong class="sharp">次回講師</strong><br>Bitcoin Assosiation<br>Ella Qiang<!--<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a>--></div>              
+              <!--<div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
            <div class=teacher10>
-              <div class=name5><strong class="sharp">ホスト</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
+              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
               <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
-             <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>
+             <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>-->
            </div>
-           <div class=teacher20>
+           <!--<div class=teacher20>
               <div class=name5><strong class="sharp">アプリ紹介</strong><br>SatoSeed<br><a href="https://twitter.com/SatoSeedSV">https://twitter.com/SatoSeedSV</a><br></div>
              <div class=theme5><strong>テーマ</strong><br>Relica</div>
-           </div>
+           </div>-->
           
           <div class=disc>
             <h3 class=note>参加条件</h3>
