--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
            <div class=teacher10>
-              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
-              <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
+              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br>--></div>
+              <!--<div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
              <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>-->
            </div>
            <!--<div class=teacher20>
