--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
            <div class=teacher10>
-              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br>--></div>
+              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL社<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br>--></div>
               <!--<div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
              <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>-->
            </div>
@@ -79,6 +79,40 @@
       
         <section>
           <h3 class=past>過去に開催の勉強会</h3>
+          　<div class = past1>
+              <div class=studygroup1>
+                <h4 class=time>第<strong class="pre">６</strong>回</h4>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/bb4ipwuScTY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=ksato>
+                    <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
+                    <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>/div>
+                  </div>  
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1　src="https://www.youtube.com/embed/8LLGJd3lFEk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=ksato>
+                    <div class=name1><strong class="sharp">講師</strong><br>千葉工業大学　工学部　藤原明広教授</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>ビットコインSVの巨大ブロック実験場</div>
+                  </div>
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1　src="https://www.youtube.com/embed/ywm_8cQADRU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=ksato>
+                    <div class=name1><strong class="sharp">講師</strong><br>千葉工業大学　工学部　藤原明広教授</div>
+                    <div class=theme3><strong class="sharp">テーマ</strong><br>ビットコインSVの巨大ブロック実験場　質疑応答</div>
+                  </div>
+                </div>
+                <div class=teacher1>
+                  <iframe class=movie1 src="https://www.youtube.com/embed/wgU-97w0A1k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class=ksato>
+                    <div class=name1><strong class="sharp">紹介者</strong><br>@Dragon<br><a href="https://twitter.com/bbjames77">https://https://twitter.com/bbjames77</a></div>
+                    <div class=theme3><strong class="sharp">紹介アプリ</strong><br>HandCash</div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class = past1>
               <div class=studygroup1>
                 <h4 class=time>第<strong class="pre">5</strong>回</h4>
