--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h4 class=time>第<strong class="pre">６</strong>回</h4>
                 <div class=teacher1>
                   <iframe class=movie1 src="https://www.youtube.com/embed/bb4ipwuScTY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <div class=ksato>
+                  <div class=shishido>
                     <div class=name1><strong class="sharp">講師</strong><br>KEN SATO<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a></div>
                     <div class=company3>円ポイント代表<br>（BSVを使った日本の少額決済システム）</div>
                     <div class=theme3><strong class="sharp">テーマ</strong><br>/div>
