--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       
         <section>
           <h3 class=past>過去に開催の勉強会</h3>
-          　<div class = past1>
+          　<!--<div class = past1>
               <div class=studygroup1>
                 <h4 class=time>第<strong class="pre">６</strong>回</h4>
                 <div class=teacher1>
@@ -105,7 +105,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
             <div class = past1>
               <div class=studygroup1>
                 <h4 class=time>第<strong class="pre">5</strong>回</h4>
