--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1 class=title>Bitcoin<span>SV</span>勉強会</h1>
             <h3>次回開催日時</h3>
             <h4>2021<span>年</span>2<span>月</span>27<span>日</span>19<span>時</span>30分〜</h4>
-            <!--<p>毎月第４土曜日開催予定</p>-->
+            <p>毎月第４土曜日開催予定</p>
           </div>  
           <p　class=youtube>YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
           <div class=entry>
@@ -79,7 +79,7 @@
       
         <section>
           <h3 class=past>過去に開催の勉強会</h3>
-          　<!--<div class = past1>
+          　<div class = past1>
               <div class=studygroup1>
                 <h4 class=time>第<strong class="pre">６</strong>回</h4>
                 <div class=teacher1>
@@ -105,7 +105,7 @@
                   </div>
                 </div>
               </div>
-            </div>-->
+            </div>
             <div class = past1>
               <div class=studygroup1>
                 <h4 class=time>第<strong class="pre">5</strong>回</h4>
