--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class=date>
             <h1 class=title>Bitcoin<span>SV</span>勉強会</h1>
             <h3>次回開催日時</h3>
-            <h4>2021<span>年</span>2<span>月</span>27<span>日</span>19<span>時</span>30分〜</h4>
+            <h4>2021<span>年</span>3<span>月</span>27<span>日<!--</span>19<span>時</span>30分〜</h4>-->
             <p>毎月第４土曜日開催予定</p>
           </div>  
           <p　class=youtube>YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
