--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             </a>
           </div>   
             <div class=teacher0>
-              <div class=name4><strong class="sharp">次回講師</strong><br>Faia<br>George Siosi Samuels<!--<br><a href="https://twitter.com/masumihamahira">https://twitter.com/masumihamahira</a>--></div>              
+              <div class=name4><strong class="sharp">次回講師</strong><br>Faia<br>George Siosi Samuels<br><a href="https://twitter.com/GeorgeSiosi">https://twitter.com/GeorgeSiosi</a></div>              
               <!--<div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
            <!--<div class=teacher10>
-              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL社<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br>--></div>
-              <!--<div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
-             <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>-->
+              <div class=name5><strong class="sharp">次回講師</strong><br>TAAL社<br>Jerry D Chan<!--<br><a href="https://twitter.com/Uncle_Nakamoto">https://twitter.com/Uncle_Nakamoto</a><br></div>
+              <div class=company4>円ポイント代表<br>(BSVを使った日本の少額決済システム)</div>
+             <div class=theme5><strong>テーマ</strong><br>BTC BCH BSV の違いと比較</div>
            </div>-->
            <!--<div class=teacher20>
               <div class=name5><strong class="sharp">アプリ紹介</strong><br>SatoSeed<br><a href="https://twitter.com/SatoSeedSV">https://twitter.com/SatoSeedSV</a><br></div>
