--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class=date>
             <h1 class=title>Bitcoin<span>SV</span>勉強会</h1>
             <h3>次回開催日時</h3>
-            <h4>2021<span>年</span>3<span>月</span>27<span>日</span>20<span>時</span>30分〜</h4>
+            <h4>2021<span>年</span>4<span>月</span>24<span>日<!--</span>20<span>時</span>30分〜--></h4>
             <p>毎月第４土曜日開催予定</p>
           </div>  
           <p　class=youtube>YouTubeチャンネル開設致しました。チャンネル登録、よろしくお願いいたします。</p>
@@ -48,8 +48,8 @@
             </a>
           </div>   
             <div class=teacher0>
-              <div class=name4><strong class="sharp">次回講師</strong><br>Faia<br>George Siosi Samuels<br><a href="https://twitter.com/GeorgeSiosi">https://twitter.com/GeorgeSiosi</a></div>              
-              <!--<div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>
+              <!--<div class=name4><strong class="sharp">次回講師</strong><br>Faia<br>George Siosi Samuels<br><a href="https://twitter.com/GeorgeSiosi">https://twitter.com/GeorgeSiosi</a></div>              
+              <div class=theme4><strong>テーマ</strong><br>スケーリングテストネット</div>-->
               <!--<div class=overview4><strong>概要</strong><br>イスラム金融でのBitcoinの活用法と<br>Bitcoinが可能にするイスラム金融の未来</div>-->
             </div>
            <!--<div class=teacher10>
